# spiresRobot2026

./: .gitignore  AdvantageScope 2-4-2026.json  AdvantageScope camera sim.json  AdvantageScope-TuneDrive-Window1.json  AdvantageScope-TuneDrive-Window2.json  CLAUDE.md  README.md  dashboard.py  elastic-layout.json  physics.py  potentialFieldPlotter.py  pyproject.toml  robot.py  robotcontainer.py  robotstate.py  simgui.json  teamNumber.py  vectorPlotter.py
.claude/: settings.local.json
.docs/: architecture.graphml  closedLoopDrivetrainControl.md  docs.md  drivetrain.md  drivetrainControlStrategy.md  localization.md  navigation.md  profiledController.graphml  utilites.md  vsCodeDeployment.md
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml
.wpilib/: wpilib_preferences.json
AutoSequencerV2/: autoSequencer.py  mode.py  modeList.py  parallelCommandGroup.py
AutoSequencerV2/builtInCommands/: waitCommand.py
AutoSequencerV2/builtInModes/: doNothingMode.py
Autonomous/commands/: disableAprilTags.py  driveForwardSlowCommand.py  drivePathCommand.py  ejectAlgaeCommand.py  ejectCoralCommand.py  elevatorHeightCommand.py  enableAprilTags.py  intakeAlgaeCommand.py  intakeCoralCommand.py  intakeCoralCommandpt1.py
Autonomous/modes/: cCycleL1.py  cCycleL2.py  (+10 more)
Elevatorandmech/: ElevatorControl.py  ElevatorandMechConstants.py  algaeManipulatorControl.py  coralManipulatorControl.py  coralSuperstructure.py
climber/: Climber.py
constants/: __init__.py  climber.py  drive.py  field.py  flywheel.py  hood.py  indexer.py  intake.py  led.py  logging.py  math.py  motors.py  oi.py  shooting.py  sim.py  trajectory.py  turret.py  vision.py
dashboardWidgets/: reefIndicator.py  swerveState.py
deploy/: callMeMaybe.chrp  combined_calibration.json
drivetrain/: drivetrainCommand.py  drivetrainControl.py  drivetrainDependentConstants.py  drivetrainPhysical.py  swerveModuleControl.py  swerveModuleGainSet.py
fuelSystems/: fuelSystemConstants.py  intakeControl.py  keil.py  pyPy.py  shooterControl.py
humanInterface/: driverInterface.py  ledControl.py  operatorInterface.py
memes/: ctreMusicPlayback.py
navigation/: __init__.py  autoDriveNavConstants.py  autoSteerNavConstants.py  forceGenerators.py  navConstants.py  navForce.py  obstacleDetector.py  repulsorFieldPlanner.py
pyLogs/: .gitignore
pykit/: alertlogger.py  autolog.py  logdatareciever.py  loggedrobot.py  logger.py  logreplaysource.py  logtable.py  logvalue.py
sensors/: limelight.py
testingMotors/: motorCtrl.py
tests/: _replay_runner.py  autoSequencer_test.py  camera_path_test.py  conftest.py  controllerTestPyKitReplay.py  pyfrc_test.py  replay_test.py  slewratelimitawayfromzero_test.py
tools/: find_replay_divergence.py  plot_vision_fix.py  wpilog_to_csv.py
util/: angleoptimize.py  controltype.py  fliputil.py  helpfultriggerwrappers.py  logtracer.py  logtunablenumber.py  phoenixutil.py  robotposeestimator.py
utils/: __init__.py  allianceTransformUtils.py  autonomousTransformUtils.py  calibration.py  constants.py  crashLogger.py  extDriveManager.py  faults.py  fieldTagLayout.py  functionGenerator.py  mapLookup2d.py  mathUtils.py  powerMonitor.py  rioMonitor.py  robotIdentification.py  robotLoggerSetup.py  segmentTimeTracker.py  signalLogging.py  singleton.py  slewratelimitawayfromzero.py  timingHist.py  units.py
webserver/: webserver.py
westwood/: operatorinterface.py  robot.py  robotcontainer.py  robotmechanism.py  robotstate.py  westwoodrobotcontainer.py
wrappers/: casserolePhotonCamera.py  motorStallDetector.py  wrapperedGyro.py  wrapperedKraken.py  wrapperedLimelightCamera.py  wrapperedMotorCommon.py  wrapperedMotorSuper.py  wrapperedObstaclePhotonCamera.py  wrapperedPoseEstPhotonCamera.py  wrapperedPulseWidthEncoder.py  wrapperedRevThroughBoreEncoder.py  wrapperedSparkFlex.py  wrapperedSparkMax.py  wrapperedSparkMotor.py  wrapperedThroughBoreHexEncoder.py
(+172 files in other folders)
